crates/tmark-writers/tests/snapshots/fixtures__critic-substitute@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>Call it <del class="critic">colour</del><ins class="critic">color</ins> everywhere.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
