crates/tmark-writers/tests/snapshots/fixtures__critic-substitute@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Call it #ts-subst[colour][color] everywhere.

---requires---
{
  "packages": [
    "ulem",
    "xcolor"
  ],
  "fragments": [
    "ts-critic"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
