crates/tmark-writers/tests/snapshots/fixtures__definition-list@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
/ Term: Definition, indented continuation lines aligned.
  Second paragraph of the definition.
/ Term: Second definition.
/ Other: Its definition.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
