crates/tmark-writers/tests/snapshots/fixtures__diag-compat-unsupported@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>A word, a [[Wiki Page]].</p>
<p>a. first fancy item</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
