crates/tmark-writers/tests/snapshots/fixtures__diag-compat-unsupported@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
A {--deleted--} word, a \[\[Wiki Page\]\].

a. first fancy item

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
