crates/tmark-writers/tests/snapshots/fixtures__diag-include-missing@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<!-- include chapters/boot.md -->
<p>See <span class="unresolved">[?fwrev:fw:x]</span>.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [
    {
      "src": "chapters/boot.md",
      "node": 2
    }
  ],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
