crates/tmark-writers/tests/snapshots/fixtures__diag-include-missing@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\input{chapters/boot}

See [?fwrev:fw:x].

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [
    {
      "src": "chapters/boot.md",
      "node": 2
    }
  ],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
